<resources>
    <string name="app_name">Ahmed khadraoui</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Taille</string>
    <string name="weight">Poids</string>
    <string name="btn_add">+</string>
    <string name="btn_minus">-</string>
    <string name="age">Age</string>
    <string name="result">Resultat</string>

    <string name="height_unit">%d cm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
